// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init golden — polyglot (rust,typescript) > scaffolds per-language check files + the polyglot recipe slug list > poly/example-check-rust.mjs 1`] = `
"// Example fitness check.
//
// Edit this file or add new .mjs files to opensip-cli/fit/checks/.
// Files in this directory are auto-loaded on the next \`opensip fit\` run.
//
// This demo flags any file containing the literal \`EXAMPLE_TODO\`. After
// you confirm the wiring works, delete or replace it with a real check.
//
// Docs: https://github.com/opensip-ai/opensip-cli#authoring-a-check-package
import { defineCheck } from '@opensip-cli/fitness';

export const checks = [
  defineCheck({
    id: 'b4f2e9d5-8c3e-4a6b-9f7d-8e2b3c4d5e6f',
    slug: 'example-check-rust',
    description: 'Demo check — flags any file containing the literal EXAMPLE_TODO',
    scope: { languages: ['rust'], concerns: ['backend'] },
    tags: ['example'],
    analyze: (content, filePath) => {
      const i = content.indexOf('EXAMPLE_TODO');
      if (i < 0) return [];
      return [{
        line: content.slice(0, i).split('\\n').length,
        message: 'Found the example trigger string.',
        severity: 'warning',
        suggestion:
          'This is just a demo. Delete opensip-cli/fit/checks/example-check.mjs ' +
          'once you have your own checks.',
        filePath,
      }];
    },
  }),
];
"
`;

exports[`init golden — polyglot (rust,typescript) > scaffolds per-language check files + the polyglot recipe slug list > poly/example-check-typescript.mjs 1`] = `
"// Example fitness check.
//
// Edit this file or add new .mjs files to opensip-cli/fit/checks/.
// Files in this directory are auto-loaded on the next \`opensip fit\` run.
//
// This demo flags any file containing the literal \`EXAMPLE_TODO\`. After
// you confirm the wiring works, delete or replace it with a real check.
//
// Docs: https://github.com/opensip-ai/opensip-cli#authoring-a-check-package
import { defineCheck } from '@opensip-cli/fitness';

export const checks = [
  defineCheck({
    id: 'a3e1f8c4-9b2d-4f5a-8e6c-7d1a2b3c4d5e',
    slug: 'example-check-typescript',
    description: 'Demo check — flags any file containing the literal EXAMPLE_TODO',
    scope: { languages: ['typescript'], concerns: ['backend'] },
    tags: ['example'],
    analyze: (content, filePath) => {
      const i = content.indexOf('EXAMPLE_TODO');
      if (i < 0) return [];
      return [{
        line: content.slice(0, i).split('\\n').length,
        message: 'Found the example trigger string.',
        severity: 'warning',
        suggestion:
          'This is just a demo. Delete opensip-cli/fit/checks/example-check.mjs ' +
          'once you have your own checks.',
        filePath,
      }];
    },
  }),
];
"
`;

exports[`init golden — polyglot (rust,typescript) > scaffolds per-language check files + the polyglot recipe slug list > poly/fit/recipes/example-recipe.mjs 1`] = `
"// Example fitness recipe — runs only the example check(s).
//
// Edit this file or add new .mjs files to opensip-cli/fit/recipes/.
// Files in this directory are auto-loaded on the next run.
//
// Run this recipe explicitly:  opensip fit --recipe example
//
// To run all enabled checks (built-in + your custom ones), omit
// --recipe and the built-in \`default\` recipe applies.
export const recipes = [{
  id: 'URCP_example',
  name: 'example',
  displayName: 'Example',
  description: 'Demo recipe — runs only the example check(s)',
  checks: { type: 'explicit', checkIds: ['example-check-rust', 'example-check-typescript'] },
  execution: { mode: 'parallel', stopOnFirstFailure: false, timeout: 30_000 },
  reporting: { format: 'table', verbose: false },
}];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > .gitignore 1`] = `
"opensip-cli/.runtime/
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > config.yml 1`] = `
"# OpenSIP CLI — project configuration
#
# Defines named target file sets for fitness checks. Each fitness
# check declares a \`scope\` (languages + concerns); discovery
# matches it against these targets to determine which files the
# check runs against.
#
# Docs: https://github.com/opensip-ai/opensip-cli#configuration

schemaVersion: 1

globalExcludes:
  - "**/node_modules/**"
  - "**/dist/**"

targets:
  typescript-source:
    description: TypeScript / TSX source code
    languages: [typescript]
    concerns: [backend]
    include:
      - "src/**/*.ts"
      - "src/**/*.tsx"
      - "packages/*/src/**/*.ts"
      - "packages/*/src/**/*.tsx"
    exclude:
      - "**/*.test.ts"
      - "**/*.test.tsx"
      - "**/__tests__/**"
      - "**/node_modules/**"
      - "**/dist/**"


# =============================================================================
# Fitness configuration
# =============================================================================

fitness:
  failOnErrors: 1     # fail if total errors >= this (0 = never fail on errors)
  failOnWarnings: 0   # fail if total warnings >= this (0 = warnings are informational)
  disabledChecks: []
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > fit/checks/example-check.mjs 1`] = `
"// Example fitness check.
//
// Edit this file or add new .mjs files to opensip-cli/fit/checks/.
// Files in this directory are auto-loaded on the next \`opensip fit\` run.
//
// This demo flags any file containing the literal \`EXAMPLE_TODO\`. After
// you confirm the wiring works, delete or replace it with a real check.
//
// Docs: https://github.com/opensip-ai/opensip-cli#authoring-a-check-package
import { defineCheck } from '@opensip-cli/fitness';

export const checks = [
  defineCheck({
    id: 'a3e1f8c4-9b2d-4f5a-8e6c-7d1a2b3c4d5e',
    slug: 'example-check',
    description: 'Demo check — flags any file containing the literal EXAMPLE_TODO',
    scope: { languages: ['typescript'], concerns: ['backend'] },
    tags: ['example'],
    analyze: (content, filePath) => {
      const i = content.indexOf('EXAMPLE_TODO');
      if (i < 0) return [];
      return [{
        line: content.slice(0, i).split('\\n').length,
        message: 'Found the example trigger string.',
        severity: 'warning',
        suggestion:
          'This is just a demo. Delete opensip-cli/fit/checks/example-check.mjs ' +
          'once you have your own checks.',
        filePath,
      }];
    },
  }),
];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > fit/recipes/example-recipe.mjs 1`] = `
"// Example fitness recipe — runs only the example check(s).
//
// Edit this file or add new .mjs files to opensip-cli/fit/recipes/.
// Files in this directory are auto-loaded on the next run.
//
// Run this recipe explicitly:  opensip fit --recipe example
//
// To run all enabled checks (built-in + your custom ones), omit
// --recipe and the built-in \`default\` recipe applies.
export const recipes = [{
  id: 'URCP_example',
  name: 'example',
  displayName: 'Example',
  description: 'Demo recipe — runs only the example check(s)',
  checks: { type: 'explicit', checkIds: ['example-check'] },
  execution: { mode: 'parallel', stopOnFirstFailure: false, timeout: 30_000 },
  reporting: { format: 'table', verbose: false },
}];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > sim/recipes/example-recipe.mjs 1`] = `
"// Example simulation recipe — runs only the example scenario.
//
// Edit this file or add new .mjs files to opensip-cli/sim/recipes/.
// Files in this directory are auto-loaded on the next run.
//
// Run this recipe explicitly:  opensip sim --recipe example
import { defineSimulationRecipe } from '@opensip-cli/simulation';

export const recipes = [
  defineSimulationRecipe({
    id: 'URCP_sim_example',
    name: 'example',
    displayName: 'Example',
    description: 'Demo recipe — runs only the example scenario',
    scenarios: { type: 'explicit', scenarioIds: ['example-scenario'] },
    execution: { mode: 'parallel', timeout: 30_000 },
  }),
];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > sim/scenarios/example-scenario.mjs 1`] = `
"// Example simulation scenario — a real load window against an in-process target.
//
// 'sim' is a standalone driver: you bring the target. This demo drives a
// trivial in-process target so it runs out-of-box and shows the harness
// mechanics (a real request loop, measured latency, asserted SLOs). To test
// YOUR service, replace 'target' with httpTarget({ url: process.env.TARGET_URL })
// — and point it only at a target you own. For fault injection, see the chaos
// docs (defineChaosScenario + fault.*).
//
// Edit this file or add new .mjs files to opensip-cli/sim/scenarios/.
// Files in this directory are auto-loaded on the next \`opensip sim\` run.
//
// Docs: https://github.com/opensip-ai/opensip-cli#simulation
import { defineLoadScenario, ASSERTIONS /*, httpTarget */ } from '@opensip-cli/simulation';

export const scenarios = [
  defineLoadScenario({
    id: 'example-scenario',
    name: 'example-scenario',
    description: 'Demo load scenario — drives a trivial in-process target',
    tags: ['example'],
    // BYO target: any async function that resolves on success / throws on failure.
    // Swap for your service:  target: httpTarget({ url: process.env.TARGET_URL }),
    target: async () => {
      await new Promise((resolve) => setTimeout(resolve, 5));
    },
    workload: { rps: 20, rampUp: 1 },
    duration: 3,
    assertions: [ASSERTIONS.lowErrorRate(), ASSERTIONS.lowLatency('p95', 500)],
  }),
];
"
`;

exports[`init golden — single language (typescript) > the config contains the host-rendered fitness: block (Phase 3 must reproduce it) > fitness-block 1`] = `
"fitness:
  failOnErrors: 1     # fail if total errors >= this (0 = never fail on errors)
  failOnWarnings: 0   # fail if total warnings >= this (0 = warnings are informational)
  disabledChecks: []
"
`;
